force-app/main/default/objects/B2CCommerceCloud_Internal_SF_Helpdesk__c/B2CCommerceCloud_Internal_SF_Helpdesk__c.object-meta.xml
<CustomObject>
    <label>B2C Commerce Cloud DISH</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <label>B2C Commerce Cloud DISH Ticket Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>B2C Commerce Cloud DISH</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>