force-app/main/default/objects/B2CCommerceCloud_Internal_SF_Helpdesk__c/fields/Additional_Comments__c.field-meta.xml
<CustomField>
    <fullName>Additional_Comments__c</fullName>
    <inlineHelpText>If requester selects Sandbox in the Demandware Instance Instance field, they must specify the applicable Sandbox within the comments.</inlineHelpText>
    <label>Additional Comments</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>