force-app/main/default/objects/B2CCommerceCloud_Internal_SF_Helpdesk__c/fields/B2CCommerceCloud_Instance__c.field-meta.xml
<CustomField>
    <fullName>B2CCommerceCloud_Instance__c</fullName>
    <label>B2C Commerce Cloud Instance</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Production Instance</fullName>
            </value>
            <value>
                <fullName>Staging Instance</fullName>
            </value>
            <value>
                <fullName>Development Instance</fullName>
            </value>
            <value>
                <fullName>Sandbox Instance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>