force-app/main/default/objects/B2CCommerceCloud_Internal_SF_Helpdesk__c/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requested By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Demandware_DISH</relationshipName>
    <type>Lookup</type>
</CustomField>