force-app/main/default/objects/B2CCommerceCloud_Internal_SF_Helpdesk__c/fields/Training_Services_Business_Type__c.field-meta.xml
<CustomField>
    <fullName>Training_Services_Business_Type__c</fullName>
    <label>Training Services Business Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Service Delivery</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Product Management</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>TSC</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
            <value>
                <fullName>Other – Please Specify in Comments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>