force-app/main/default/objects/B2CCommerceCloud_Internal_SF_Helpdesk__c/fields/User_Email__c.field-meta.xml
<CustomField>
    <fullName>User_Email__c</fullName>
    <label>User&#39;s Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>