force-app/main/default/objects/B2CCommerceCloud_Internal_SF_Helpdesk__c/fields/User_First_Name__c.field-meta.xml
<CustomField>
    <fullName>User_First_Name__c</fullName>
    <label>User&#39;s First Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>