force-app/main/default/objects/B2CCommerceCloud_Internal_SF_Helpdesk__c/fields/User_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>User_Request_Type__c</fullName>
    <label>User Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New User</fullName>
            </value>
            <value>
                <fullName>User Modification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>