force-app/main/default/objects/B2CCommerceCloud_Internal_SF_Helpdesk__c/fields/User_Title__c.field-meta.xml
<CustomField>
    <fullName>User_Title__c</fullName>
    <label>User&#39;s Title</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>