force-app/main/default/objects/B2CCommerceCloud_Internal_SF_Helpdesk__c/recordTypes/User_Creation_Request.recordType-meta.xml
<RecordType>
    <fullName>User_Creation_Request</fullName>
    <active>true</active>
    <description>User Creation or Modification Request for B2C Commerce Cloud</description>
    <label>User Creation or Modification Request</label>
</RecordType>