force-app/main/default/objects/B2CCommerceCloud_Internal_SF_Helpdesk__c/recordTypes/User_Termination_Request.recordType-meta.xml
<RecordType>
    <fullName>User_Termination_Request</fullName>
    <active>true</active>
    <description>User Termination Request for B2C Commerce Cloud</description>
    <label>User Termination Request</label>
</RecordType>